// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b iconOnly large"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      play_arrow
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b large"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b primary"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b primary iconOnly"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      volume_up
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b primary"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-rsfl0b halo"
    >
      5
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-rsfl0b halo"
    >
      23
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge Limit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-rsfl0b"
  >
    <i
      class="material-icons svelte-rsfl0b"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-rsfl0b halo"
    >
      999+
    </div>
  </button>
</section>
`;
